# itmo

./: CMakeLists.txt  DuplicateSearch.pro  README.md  StringSearch.pro  bits_seq.h  build_and_start.bat  circular_buffer.h  client.h  dialog.ui  file_scan.cpp  file_scan.h  function.h  helper.h  hm2.bat  huf_tree.cpp  huf_tree.h  huffman_code.cpp  huffman_code.h  list.h  main.cpp  main_client.cpp  main_server.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parameters.h  pom.xml  server.cpp  server.h  simple_test.txt  war_and_peace
3sem/: README.md
3sem/algo/: README.md  cf_pars.js
3sem/web/: README.md
algo/1/: F.cpp  H.cpp
algo/2/: B.cpp  C.cpp  D.cpp
algo/3/: C.cpp  H.cpp
c++/DuplicateSearch/: dialog.cpp  dialog.h  file_scan.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
c++/Huffman/: CMakeLists.txt  Makefile  bits_seq.cpp  main.cpp
c++/Huffman/tests/Data/: abrakadabra.haf  pdf.haf
c++/StringSearch/: mainwindow.cpp
c++/circular_buffer/: CMakeLists.txt  circular_buffer.h
c++/function/: CMakeLists.txt  function.h
c++/list/: CMakeLists.txt  list.h
crypto/a3-a5-a8/: .gitignore  pom.xml
crypto/cubeHash/: pom.xml
crypto/rsa/: pom.xml
dialog/: dialog.cpp  dialog.h  dialog.ui
dm/: README.md
dm/1/: D.cpp
finder/: consts.h  finder.cpp  finder.h
finder/tringram/: trigram.cpp  trigram.h  trigram_finder.cpp  trigram_finder.h
haskell/: README.md
haskell/hw0/: hw0.cabal
haskell/hw1/: hw1.cabal
haskell/hw1/src/: FunctorAndFriends.hs  Monads.hs  Monoids.hs  Nat.hs  Parsers.hs  Tree.hs  Week.hs
haskell/hw1/test/: FunctorAndFriendsSpec.hs  MonadsSpec.hs  MonoidsSpec.hs  NatSpec.hs  Spec.hs  TreeSpec.hs  WeekSpec.hs
haskell/hw2/: README.md  hw2-FriendlyEvil.cabal  package.yaml
haskell/hw3/: package.yaml
java-advanced-2019/javadoc/: allpackages-index.html  element-list  index-all.html  overview-tree.html  type-search-index.js
java-advanced-2019/scripts/: build_and_start.bat  build_and_start.sh  create_javadoc.bat
javadoc/: allclasses-index.html  allclasses.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  member-search-index.js  overview-summary.html  package-search-index.js
lab2/: grammar.txt  pom.xml
lab3/: pom.xml
lab4/: pom.xml
matan-tex/year-2017/: colloc02.tex
mathematical-logic/task1/: Makefile  Syntax.hs  Syntax.y
mathematical-logic/task2/: HelpStructure.hs  Helpers.hs  Main.hs  Makefile  Syntax.hs
mathematical-logic/task3/: Axioms.hs  Lex.x  Makefile  Proofs.hs
modules/info.kgeorgiy.java.advanced.arrayset/: module-info.java
modules/info.kgeorgiy.java.advanced.student/: module-info.java
modules/info.kgeorgiy.java.advanced.walk/: module-info.java
mt/lab1/: 0.perl  10.perl  11.perl  210.perl  23.perl  (+14 more)
scripts/: build_and_start.bat  create_jar.bat
src/: DES.java  DESAlgorithm.java  DESEncryptor.java  DESTest.java  Decryptor.java  DecryptorTest.java  Helper.java  MARSEncrypter.java  MARSTest.java  Main.java  Tests.java
task1/: Lex.hs
task2/: Axioms.hs
task3/: Deduction.hs  HelpStructure.hs  Helpers.hs  Main.hs  Syntax.y
test/: MARS.java
tests/: testHaff.sh
text/: BigRussianText.txt  MiddleRussianText.txt
year-2017/: README.md  Sort.java  colloc01.tex  colloc02.tex  exam.tex  sorted.tex  tosort.tex
(+313 files in other folders)
