name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Week, Nat, Tree, Monoids, FunctorAndFriends, Monads, Parsers
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
      , mtl
  default-language:    Haskell2010

test-suite doctests
  type:             exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends:
      base >= 4.9 && < 5
    , hspec
    , QuickCheck        >= 2.12 && < 2.14
    , containers > 0.5
    , hw1
  other-modules: WeekSpec, NatSpec, TreeSpec, MonoidsSpec, FunctorAndFriendsSpec, MonadsSpec
  ghc-options:      -Wall -threaded
  hs-source-dirs:   test
  default-language: Haskell2010
